--- a/app.html
+++ b/app.html
@@ -1450,14 +1450,14 @@
         </div>
         
         <div class="dashButtons">      
-          <button><div class="icon" style="background: rgba(135, 206, 250, 0.7);"><i class="fa fa-user" aria-hidden="true"></i></div>Balance</button>
+          <button><div class="icon" style="background: rgba(135, 206, 250, 0.8);"><i class="fa fa-user" aria-hidden="true"></i></div>Balance</button>
           <button onclick="openModal('deposit')"><div class="icon"><i class="fa fa-arrow-up" aria-hidden="true"></i></div>Deposit</button>
           <button onclick="openModal('withdraw')"><div class="icon"><i class="fa fa-paper-plane" aria-hidden="true"></i></div>Withdraw</button>
           <button><div class="icon"><i class="fa fa-ellipsis-v" aria-hidden="true"></i></div>Details</button>
         </div>
       </div>
 			<div style="text-align: center; margin-top: 60px;">
-				<p>Your Transactions</p>
+				<p style="margin-bottom: 30px; font-weight: bold; font-size: 16px;">Your Transactions</p>
 				<p>You don't have any pending or ongoing transactions. Click details for shop, donate or transfer and all other history.</p>
 			</div>
 			
