--- a/adjust.html
+++ b/adjust.html
@@ -89,15 +89,7 @@ section {
 }
 
 
-p, ul, li {
-  font-size: 1rem;
-  margin: 0.5rem 0;
-}
 
-ul {
-  list-style-type: disc;
-  padding-left: 1rem;
-}
 /* Body */
 .container {
 	margin: 5px 0;
@@ -126,7 +118,7 @@ ul {
 	border: 1px solid blue;
 	display: block;
 	text-align: center;
-	width: 25%;
+	width: 20%;
 }
 	  
 .box i {
@@ -135,9 +127,11 @@ ul {
 
 .box h4 {
 	margin: 0;	
-	display: block;
+	font-size: 14px;
 }
-	  
+.box p {
+	font-size: 13px;
+}
 
   </style>
 </head>
