--- a/adjust.html
+++ b/adjust.html
@@ -131,7 +131,9 @@ section {
 }
 .box p {
 	font-size: 13px;
-	overflow-x: auto;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
   </style>
