--- a/astarmart.html
+++ b/astarmart.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>G-Wallet</title>
+    <title>Starmart</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="manifest" href="manifest.json">
-    <meta name="theme-color" content="#4CAF50">
     <script>
         // Checks if running as PWA and redirects if rogged
         if (window.matchMedia('(display-mode: standalone)') .matches) {
