--- a/astarmart.html
+++ b/astarmart.html
@@ -33,6 +33,43 @@
             line-height: 1.6;
             color: #333;
         }
+        .top {	
+            position: fixed;	
+            top: 0;	
+            display: flex;	
+            background: #fff;	
+            margin: 0;	
+            justify-content: space-between;
+            box-sizing: border-box;
+            align-items: center;	
+            width: 100%;
+            padding: 10px 20px; 
+            z-index: 1000;  
+            border-bottom: 2px solid #fff;  
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        .logo p{	
+            font-size: 24px;	
+            font-family: "Poppins", "Manrope", system-ui, sans-serif;
+            font-weight: 700;     
+            letter-spacing: -0.6px; 
+            color: #0066ff;	
+            margin: 0;
+        }
+       .logo i {	
+            font-size: 30px;	
+            margin-right: 10px;
+       }
+       .topBtn button{
+           font-size: 14px;
+           background: #fff;	
+           color: #0066ff;
+           border: 2px solid #0066ff;	
+           padding: 8px 12px;
+           border-radius: 20px;	
+           display: none;
+       }
 
         .container {
             max-width: 500px;
@@ -305,6 +342,14 @@
     </style>
 </head>
 <body>
+   <div class="top">
+    <div class="logo">
+      <p><i class="fa fa-balance-scale" aria-hidden="true"></i><strong>Starmart</strong></p>
+	</div>
+	<div class="topBtn">
+		<button id="redeemBtn">Redeem Token</button>
+	</div>
+  </div> 
     <!-- Installation Required Screen -->
     <div id="installScreen" class="install-screen">
         <div class="container">
