--- a/astarmart.html
+++ b/astarmart.html
@@ -85,6 +85,7 @@
             align-items: center;
             justify-content: center;
             padding: 10px;
+			margin-top: 20px;
         }
  
         .app-content {
