--- a/astarmart.html
+++ b/astarmart.html
@@ -80,7 +80,7 @@
 
         .install-screen {
             min-height: 100vh;
-            background: linear-gradient(135deg, #e8f5e8 0%, #f1f8e9 100%);
+            background: linear-gradient(135deg, #e8ecf5 0%, #e9eff8 100%);
             display: flex;
             align-items: center;
             justify-content: center;
