--- a/adjust.html
+++ b/adjust.html
@@ -291,7 +291,7 @@ function updateUserById(id, property, value) {
         window.addEventListener('load', () => {
             // Choose one method:
             fetchMessages(); // Long-polling (more efficient)
-            displaySavedUsers();
+           // displaySavedUsers();
         });
     </script>
 </html>
