--- a/adjust.html
+++ b/adjust.html
@@ -234,7 +234,8 @@ section {
               usersClone.querySelector('.demoAcc').textContent = user.demoAcc;
               usersClone.querySelector('.realAcc').textContent = user.userId;
               usersClone.querySelector('.request').textContent = user.demoAcc;
-		  }
+			  messageDisplay.appendChild(usersClone);
+          });
         }
         
 
