--- a/adjust.html
+++ b/adjust.html
@@ -232,8 +232,8 @@ section {
               usersClone.querySelector('.status').textContent = user.status;
               usersClone.querySelector('.userId').textContent = user.userId;
               usersClone.querySelector('.demoAcc').textContent = user.demoAcc;
-              usersClone.querySelector('.realAcc').textContent = user.userId;
-              usersClone.querySelector('.request').textContent = user.demoAcc;
+              usersClone.querySelector('.realAcc').textContent = user.realAcc;
+              usersClone.querySelector('.request').textContent = user.request;
 			  messageDisplay.appendChild(usersClone);
           });
         }
