--- a/adjust.html
+++ b/adjust.html
@@ -277,7 +277,7 @@ section {
                     displaySavedUsers();
                 } else {
                     savedUsers.push({
-						status: message.status,
+						status: 'online',
                         userId: newUserId,
                         demoAcc: message.demoAcc,
 						realAcc: message.realAcc,
