--- a/adjust.html
+++ b/adjust.html
@@ -173,7 +173,7 @@ section {
 					<div class="upset">
 						<div class="box">
 							<h4>Status</h4>
-							<p class="status"><i class="fa fa-heartbeat" style="color: green;" aria-hidden="true"></i></p>
+							<p class="status"><i class="fa fa-heartbeat" aria-hidden="true"></i></p>
 						</div>
 					
 						<div class="box">
