--- a/adjust.html
+++ b/adjust.html
@@ -236,7 +236,7 @@ section {
             
           savedUsers.forEach((user, index) => {
               const usersClone = userTemplate.cloneNode(true);
-              usersClone.querySelector('.status').classList.add(user.status);
+              usersClone.querySelector('.status').classList.add('offline');
               usersClone.querySelector('.userId').textContent = user.userId;
               usersClone.querySelector('.demoAcc').textContent = user.demoAcc;
               usersClone.querySelector('.realAcc').textContent = user.realAcc;
