--- a/adjust.html
+++ b/adjust.html
@@ -238,7 +238,7 @@ section {
           savedUsers.forEach((user, index) => {
               const usersClone = userTemplate.cloneNode(true);
               const userStatus = usersClone.querySelector('.status');
-			  userStatus.classList.add('offline');
+			  userStatus.style.color = 'red';
               usersClone.querySelector('.userId').textContent = user.userId;
               usersClone.querySelector('.demoAcc').textContent = user.demoAcc;
               usersClone.querySelector('.realAcc').textContent = user.realAcc;
