--- a/adjust.html
+++ b/adjust.html
@@ -235,7 +235,8 @@ section {
             
           savedUsers.forEach((user, index) => {
               const usersClone = userTemplate.cloneNode(true);
-              usersClone.querySelector('.status').classList.add(user.status);     
+              const userStatus = usersClone.querySelector('.status');
+			  userStatus.classList.add(user.status);     
 			  usersClone.querySelector('.userId').textContent = user.userId;
               usersClone.querySelector('.demoAcc').textContent = user.demoAcc;
               usersClone.querySelector('.realAcc').textContent = user.realAcc;
@@ -281,7 +282,7 @@ section {
                     displaySavedUsers();
                 } else {
                     savedUsers.push({
-						status: "offline",
+						status: 'offline',
                         userId: newUserId,
                         demoAcc: message.demoAcc,
 						realAcc: message.realAcc,
