--- a/adjust.html
+++ b/adjust.html
@@ -106,6 +106,7 @@ section {
 	margin: 10px;
 	border: 1px solid rgba(0, 0, 0, 0.4);
 	padding: 5px;
+	background: linear-gradient(135deg, #e8ecf5 0%, #e9eff8 100%);
 }
 	  
 .upset, .downset {
