--- a/adjust.html
+++ b/adjust.html
@@ -120,7 +120,9 @@ section {
 	display: block;
 	text-align: center;
 	width: 23%;
-	height: 100%;
+	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
+	background: #fff;
+	height: 8vh;
 }
 	  
 .box i {
