--- a/adjust.html
+++ b/adjust.html
@@ -103,9 +103,10 @@ section {
 }
 	  
 .user {
-	margin: 10px;
+	margin: 15px;
 	border: 1px solid rgba(0, 0, 0, 0.4);
 	padding: 5px;
+	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 	background: linear-gradient(135deg, #e8ecf5 0%, #e9eff8 100%);
 }
 	  
