--- a/adjust.html
+++ b/adjust.html
@@ -117,11 +117,10 @@ section {
 } 
 
 .box {
-	border: 1px solid blue;
+	border: 1px solid black;
 	display: block;
 	text-align: center;
-	width: 24%;
-	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
+	width: 25%;
 	background: #fff;
 	height: 10vh;
 }
