--- a/adjust.html
+++ b/adjust.html
@@ -117,10 +117,10 @@ section {
 } 
 
 .box {
-	border: 1px solid black;
+	border: 1px solid blue;
 	display: block;
 	text-align: center;
-	width: 25%;
+	width: 24.5%;
 	background: #fff;
 	height: 10vh;
 }
