--- a/adjust.html
+++ b/adjust.html
@@ -248,10 +248,12 @@ section {
           });
         }
 
-		function clear() {
+		function toclear() {
 			localStorage.removeItem('savedUsers');
 			displaySavedUsers();
 		}
+
+		toclear()
 
         // Function to fetch new messages using long-polling
         async function fetchMessages() {
