--- a/adjust.html
+++ b/adjust.html
@@ -253,7 +253,6 @@ section {
 			displaySavedUsers();
 		}
 
-		toclear()
 
         // Function to fetch new messages using long-polling
         async function fetchMessages() {
@@ -280,14 +279,23 @@ section {
                 const newUserId = message.userId;
                 const existing = savedUsers.find(user => user.userId.toLowerCase() === newUserId.toLowerCase());
                 if (existing) {
-                    updateUserById(newUserId, 'status', message.status);
-                    updateUserById(newUserId, 'demoAcc', message.demoAcc);
-                    updateUserById(newUserId, 'realAcc', message.realAcc);
-                    updateUserById(newUserId, 'request', message.request);
+					if(message.status){
+						updateUserById(newUserId, 'status', message.status);
+					}
+					if(message.demoAcc){
+						updateUserById(newUserId, 'demoAcc', message.demoAcc);
+					}
+					if(message.realAcc){
+						updateUserById(newUserId, 'realAcc', message.realAcc);
+					}
+					if(message.request){
+						updateUserById(newUserId, 'request', message.request);
+					}
+                    
                     displaySavedUsers();
                 } else {
                     savedUsers.push({
-						status: 'offline',
+						status: message.status,
                         userId: newUserId,
                         demoAcc: message.demoAcc,
 						realAcc: message.realAcc,
