--- a/adjust.html
+++ b/adjust.html
@@ -268,6 +268,7 @@ section {
 			localStorage.clear();
 			const existingUsers = messageDisplay.querySelectorAll('.user');
             existingUsers.forEach(user => user.remove());
+			window.location.reload();
 		}
 		
 		const clearBtn = document.getElementById('clearBtn');
