Clear last activity time from local storage
Remove last activity time from local storage.

--- a/countup.html
+++ b/countup.html
@@ -11,6 +11,9 @@
     const timeAgoElement = document.getElementById('timeAgo');
     const STORAGE_KEY = 'lastActivityTime';
 
+    
+    localStorage.removeItem(STORAGE_KEY);
+    
     // Format time difference in a human-readable way
     function formatTimeAgo(timestamp) {
       const now = Date.now();
