--- a/countupmulti.html
+++ b/countupmulti.html
@@ -53,7 +53,8 @@
 
       const seconds = Math.floor((Date.now() - timestamp) / 1000);
 
-      if (seconds < 60) return 'just now';
+      if (seconds < 10) return 'just now';
+      if (seconds < 60) return `${seconds} seconds ago`;
       if (seconds < 120) return '1 minute ago';
       if (seconds < 3600) return `${Math.floor(seconds / 60)} minutes ago`;
       if (seconds < 7200) return '1 hour ago';
