--- a/asignup.html
+++ b/asignup.html
@@ -175,8 +175,8 @@
 }
 .password i {
 	text-align: right;
-	position: absolute;
-	/*top: 50%;*/
+	/*position: absolute;
+	top: 50%;*/
 	width: 90%;
 }
 	  
