--- a/asignup.html
+++ b/asignup.html
@@ -175,9 +175,10 @@
 }
 .password i {
 	text-align: right;
-	position: relative;
+	position: absolute;
 	top: 50%;
 	width: 90%;
+	z-index: 5000;
 }
 	  
 #response {
