Adjust password icon positioning in asignup.html

--- a/asignup.html
+++ b/asignup.html
@@ -170,13 +170,12 @@
 }
 .password {
 	margin: 0;
-	position: relative;
 	background: transparent;
 }
 .password i {
 	text-align: right;
-	position: absolute;
-	top: 50%;
+	position: relative;
+	top: 10px;
 	width: 90%;
 	z-index: 5000;
 }
