--- a/asignup.html
+++ b/asignup.html
@@ -171,11 +171,12 @@
 .password {
 	margin: 0;
 	background: transparent;
+	position: relative;
 }
 .password i {
 	text-align: right;
-	position: relative;
-	top: 50px;
+	position: absolute;
+	top: 50%;
 	width: 90%;
 	z-index: 5000;
 }
