--- a/asignup.html
+++ b/asignup.html
@@ -166,17 +166,17 @@
 	font-size: 16px;
 	margin-bottom: 15px;
 	width: 90%;
-	background: transparent;
 }
 .password {
 	margin: 0;
-	background: transparent;
 	position: relative;
+	border: 1px solid red;
 }
 .password i {
 	text-align: right;
 	position: absolute;
 	top: 50%;
+	right: 0;
 	width: 90%;
 	z-index: 5000;
 }
