Implement password show/hide feature
Added functionality to show/hide password input.

--- a/asignup.html
+++ b/asignup.html
@@ -170,7 +170,6 @@
 .password {
 	margin: 0;
 	position: relative;
-	border: 1px solid red;
 }
 .password i {
 	text-align: right;
@@ -388,6 +387,15 @@
         const step2 = document.getElementById('step2');
         const step3 = document.getElementById('step3');
 
+		// Password Show/Hide
+		const passwordInput = document.getElementById('password');
+		const toggleButton = document.getElementById('eye');
+		
+		toggleButton.addEventListener('click', () => {
+			const type = passwordInput.type === 'password' ? 'text' : 'password';
+			passwordInput.type = type;
+		});
+		
         form.addEventListener('submit', (event) => {
             event.preventDefault();
 
