--- a/asignup.html
+++ b/asignup.html
@@ -177,6 +177,7 @@
 	top: 50%;
 	right: 10%;
 	width: 90%;
+	font-size: 16px;
 	background: none;
 	border: none;
 }
@@ -253,7 +254,7 @@
 					<div class="password">
 						<label for="password">Password</label>
 						<input type="password" id="password" name="password" placeholder="create a strong password">
-						<button><i id="eye" class="fas fa-eye"></i></button>
+						<button type="button"><i id="eye" class="fas fa-eye"></i></button>
 					</div>
 					
 					<label for="confirmPassword">Confirm Password</label>
