--- a/asignup.html
+++ b/asignup.html
@@ -391,11 +391,13 @@
 
 		// Password Show/Hide
 		const passwordInput = document.getElementById('password');
+		const confirmInput = document.getElementById('confirmPassword');
 		const toggleButton = document.getElementById('eye');
 		
 		toggleButton.addEventListener('click', () => {
 			const type = passwordInput.type === 'password' ? 'text' : 'password';
 			passwordInput.type = type;
+			confirmInput.type = type;
 		});
 		
         form.addEventListener('submit', (event) => {
