Change eye icon toggle to add class instead

--- a/asignup.html
+++ b/asignup.html
@@ -401,7 +401,7 @@
 			passwordInput.type = type;
 			confirmInput.type = type;
 			
-			eye.classList.toggle('fa-eye-slash');
+			eye.classList.add('fa-eye-slash');
 		});
 		
         form.addEventListener('submit', (event) => {
