--- a/asignup.html
+++ b/asignup.html
@@ -178,8 +178,9 @@
 	right: 10%;
 	font-size: 16px;
 	background: none;
+	transform: translateY(-50%);
 	border: 1px solid red;
-	padding: 20px;
+	padding: 8px 20px;
 }
 	  
 #response {
