--- a/asignup.html
+++ b/asignup.html
@@ -256,7 +256,7 @@
 					<label for="password">Password</label>
 					<div class="password">
 						<input type="password" id="password" name="password" placeholder="create a strong password">
-						<button type="button" id="toggleButton"><i id="eye" class="fas fa-eye"></i></button>
+						<button type="button" id="toggleButton"><i class="fas fa-eye"></i></button>
 					</div>
 					
 					<label for="confirmPassword">Confirm Password</label>
@@ -394,15 +394,15 @@
 		// Password Show/Hide
 		const passwordInput = document.getElementById('password');
 		const confirmInput = document.getElementById('confirmPassword');
-		const eye = document.getElementById('eye');
 		const toggleButton = document.getElementById('toggleButton');
+		const eye = toggleButton.querySelector('i');
 		
 		toggleButton.addEventListener('click', () => {
 			const type = passwordInput.type === 'password' ? 'text' : 'password';
 			passwordInput.type = type;
 			confirmInput.type = type;
 			
-			eye.classList.add('fa-eye-slash');
+			eye.classList.toggle('fa-eye-slash');
 		});
 		
         form.addEventListener('submit', (event) => {
