Rename variable 'eye' to 'icon' for clarity

--- a/asignup.html
+++ b/asignup.html
@@ -395,14 +395,14 @@
 		const passwordInput = document.getElementById('password');
 		const confirmInput = document.getElementById('confirmPassword');
 		const toggleButton = document.getElementById('toggleButton');
-		const eye = toggleButton.querySelector('i');
+		const icon = toggleButton.querySelector('i');
 		
 		toggleButton.addEventListener('click', () => {
 			const type = passwordInput.type === 'password' ? 'text' : 'password';
 			passwordInput.type = type;
 			confirmInput.type = type;
 			
-			eye.classList.add('fa-eye-slash');
+			icon.classList.add('fa-eye-slash');
 		});
 		
         form.addEventListener('submit', (event) => {
