--- a/asignup.html
+++ b/asignup.html
@@ -401,7 +401,8 @@
 			const type = passwordInput.type === 'password' ? 'text' : 'password';
 			passwordInput.type = type;
 			confirmInput.type = type;
-			
+
+			 icon.classList.remove('fa-eye');
 			icon.classList.add('fa-eye-slash');
 		});
 		
